force-app/main/default/objects/Trigger_Handler__mdt/Trigger_Handler__mdt.object-meta.xml
<CustomObject>
    <description>Defines an Apex class as a trigger process for a particular sObject type for specific trigger events.</description>
    <label>Trigger Handler</label>
    <pluralLabel>Trigger Handlers</pluralLabel>
</CustomObject>