force-app/main/default/objects/Trigger_Handler__mdt/fields/AFTER_DELETE__c.field-meta.xml
<CustomField>
    <fullName>AFTER_DELETE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFTER DELETE</label>
    <type>Checkbox</type>
</CustomField>