force-app/main/default/objects/Trigger_Handler__mdt/fields/AFTER_INSERT__c.field-meta.xml
<CustomField>
    <fullName>AFTER_INSERT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFTER INSERT</label>
    <type>Checkbox</type>
</CustomField>