force-app/main/default/objects/Trigger_Handler__mdt/fields/AFTER_UNDELETE__c.field-meta.xml
<CustomField>
    <fullName>AFTER_UNDELETE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFTER UNDELETE</label>
    <type>Checkbox</type>
</CustomField>