force-app/main/default/objects/Trigger_Handler__mdt/fields/AFTER_UPDATE__c.field-meta.xml
<CustomField>
    <fullName>AFTER_UPDATE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AFTER UPDATE</label>
    <type>Checkbox</type>
</CustomField>