force-app/main/default/objects/Trigger_Handler__mdt/fields/BEFORE_DELETE__c.field-meta.xml
<CustomField>
    <fullName>BEFORE_DELETE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BEFORE DELETE</label>
    <type>Checkbox</type>
</CustomField>