force-app/main/default/objects/Trigger_Handler__mdt/fields/BEFORE_INSERT__c.field-meta.xml
<CustomField>
    <fullName>BEFORE_INSERT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BEFORE INSERT</label>
    <type>Checkbox</type>
</CustomField>