force-app/main/default/objects/Trigger_Handler__mdt/fields/BEFORE_UPDATE__c.field-meta.xml
<CustomField>
    <fullName>BEFORE_UPDATE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BEFORE UPDATE</label>
    <type>Checkbox</type>
</CustomField>