force-app/main/default/objects/Trigger_Handler__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <label>Execution Order</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>